--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "leac",
   "version": "1.0.0",
   "description": "simple discord bot",
-  "main": "/indec.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "discord",
@@ -12,6 +14,10 @@
     "node",
     "discordjs"
   ],
-  "author": "cascoleandro2001@gmail.com",
-  "license": "MIT"
+  "author": "Oscar Barajas <oscar@gndx.dev>",
+  "license": "MIT",
+  "dependencies": {
+    "discord.js": "^12.3.1",
+    "dotenv": "^8.2.0"
+  }
 }
